# api/gen/swagger/models/answer.go
@@ -1,0 +1,144 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Answer answer
+//
+// swagger:model Answer
+type Answer struct {
+
+	// Answer creation date
+	// Required: true
+	// Format: date-time
+	CreatedAt *strfmt.DateTime `json:"created_at"`
+
+	// Answer id
+	// Required: true
+	ID *int64 `json:"id"`
+
+	// Question id
+	// Required: true
+	QuestionID *int64 `json:"question_id"`
+
+	// Answer text
+	// Required: true
+	Text *string `json:"text"`
+
+	// User id
+	// Required: true
+	UserID *string `json:"user_id"`
+}
+
+// Validate validates this answer
+func (m *Answer) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCreatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateQuestionID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateText(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUserID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Answer) validateCreatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("created_at", "body", m.CreatedAt); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("created_at", "body", "date-time", m.CreatedAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Answer) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Answer) validateQuestionID(formats strfmt.Registry) error {
+
+	if err := validate.Required("question_id", "body", m.QuestionID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Answer) validateText(formats strfmt.Registry) error {
+
+	if err := validate.Required("text", "body", m.Text); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Answer) validateUserID(formats strfmt.Registry) error {
+
+	if err := validate.Required("user_id", "body", m.UserID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this answer based on context it is used
+func (m *Answer) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Answer) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Answer) UnmarshalBinary(b []byte) error {
+	var res Answer
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
