# api/gen/swagger/models/question_with_answers.go
@@ -1,0 +1,148 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// QuestionWithAnswers question with answers
+//
+// swagger:model QuestionWithAnswers
+type QuestionWithAnswers struct {
+
+	// answers
+	Answers []*Answer `json:"answers"`
+
+	// Question creation date
+	// Format: date-time
+	CreatedAt strfmt.DateTime `json:"created_at,omitempty"`
+
+	// Question id
+	ID int64 `json:"id,omitempty"`
+
+	// Question text
+	Text string `json:"text,omitempty"`
+}
+
+// Validate validates this question with answers
+func (m *QuestionWithAnswers) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAnswers(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateCreatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *QuestionWithAnswers) validateAnswers(formats strfmt.Registry) error {
+	if swag.IsZero(m.Answers) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Answers); i++ {
+		if swag.IsZero(m.Answers[i]) { // not required
+			continue
+		}
+
+		if m.Answers[i] != nil {
+			if err := m.Answers[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("answers" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("answers" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *QuestionWithAnswers) validateCreatedAt(formats strfmt.Registry) error {
+	if swag.IsZero(m.CreatedAt) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("created_at", "body", "date-time", m.CreatedAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this question with answers based on the context it is used
+func (m *QuestionWithAnswers) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateAnswers(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *QuestionWithAnswers) contextValidateAnswers(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Answers); i++ {
+
+		if m.Answers[i] != nil {
+
+			if swag.IsZero(m.Answers[i]) { // not required
+				return nil
+			}
+
+			if err := m.Answers[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("answers" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("answers" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *QuestionWithAnswers) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *QuestionWithAnswers) UnmarshalBinary(b []byte) error {
+	var res QuestionWithAnswers
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
